update de arquivos

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Projeto Portfólio Gen Brasil" />
+    <meta name="author" content="Thiago Faccipieri" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <link rel="icon" href="./assets/img/favicon.svg" type="image/svg" />
+    <title>Meu Perfil</title>
   </head>
   <body>
     <!-- Cabeçalho da Página (header) -->
@@ -45,7 +49,7 @@
           <input
             id="name"
             type="text"
-            name="name"
+            name="nome"
             placeholder="Digite seu nome"
             required
           />
