--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta name="description" content="Projeto Portfólio Gen Brasil" />
     <meta name="author" content="Thiago Faccipieri" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <link
-      rel="shortcut icon"
-      href="./assets/img/favicon.svg"
-      type="image/svg"
-    />
+    <link rel="icon" href="./assets/img/favicon.svg" type="image/svg" />
     <title>Meu Perfil</title>
   </head>
   <body>
     <!-- Cabeçalho da Página (header) -->
+    <!-- HTML Semantico -->
     <header>
       <!-- Div Conteudo do Cabeçalho -->
       <div id="header_content">
@@ -41,8 +38,9 @@
         <h2>Sobre o Thiago Faccipieri</h2>
         <div id="conteudo">
           <img
-            src="./assets/img/user_01.svg"
+            src="https://github.com/tjfaccipieri.png"
             alt="Foto do criador do conteudo"
+            width="200"
           />
           <article id="sobre_texto">
             <p>
@@ -98,7 +96,7 @@
         </a>
       </section>
 
-      <h3>Feito com 🧡 por Generation Brasil - 2024</h3>
+      <h3>Feito com 🧡 por Thiago Faccipieri - 2025</h3>
     </footer>
   </body>
 </html>
