--- a/index.html
+++ b/index.html
@@ -1,102 +1,158 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Projeto Portfólio Gen Brasil" />
-    <meta name="author" content="Thiago Faccipieri" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <link rel="icon" href="./assets/img/favicon.svg" type="image/svg" />
-    <title>Meu Perfil</title>
-  </head>
-  <body>
-    <!-- Cabeçalho da Página (header) -->
-    <!-- HTML Semantico -->
-    <header>
-      <!-- Div Conteudo do Cabeçalho -->
-      <div id="header_content">
-        <!-- Titulo do Cabeçalho -->
-        <div id="titulo">
-          <h1>Generation Brasil</h1>
-        </div>
+	<head>
+		<meta charset="UTF-8">
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Projeto Portfólio">
+		<meta name="author" content="Generation Brasil">
+		<meta name="keywords" content="HTML, CSS, JavaScript">
+		
+		<link rel="icon" type="image/svg" href="./assets/img/favicon.svg" />
 
-        <!-- Conteudo do Menu da Página (header) -->
-        <div id="menu">
-          <nav>
-            <ul id="menu">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="contato.html">Contato</a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
+		<!-- Link para a Folha de Estilo da Página - CSS -->
+		<link rel="stylesheet" href="./assets/css/style.css" />
 
-    <!-- Seção Principal da Página (main) -->
-    <main>
-      <section id="about">
-        <h2>Sobre o Thiago Faccipieri</h2>
-        <div id="conteudo">
-          <img
-            src="https://github.com/tjfaccipieri.png"
-            alt="Foto do criador do conteudo"
-            width="200"
-          />
-          <article id="sobre_texto">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem odio possimus, dolorem earum atque itaque quas soluta
-              placeat iure omnis porro cum debitis sequi libero! Deleniti vitae
-              quis hic cumque. Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Eius inventore ullam, quia deserunt enim cumque
-              hic officia repudiandae ad ab et sapiente qui vitae accusamus
-              adipisci provident sit assumenda laboriosam!
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem odio possimus, dolorem earum atque itaque quas soluta
-              placeat iure omnis porro cum debitis sequi libero! Deleniti vitae
-              quis hic cumque. Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Eius inventore ullam, quia deserunt enim cumque
-              hic officia repudiandae ad ab et sapiente qui vitae accusamus
-              adipisci provident sit assumenda laboriosam!
-            </p>
-          </article>
-        </div>
-      </section>
-      <section id="video">
-        <!-- Título da Seção -->
-        <h2>Meu vídeo favorito:</h2>
+		<title>Meu Perfil</title>
+	</head>
+	<body>
 
-        <!-- Vídeo da Seção -->
-        <div class="youtube">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/Z3_mtwMMuGI?si=F1QiiDYSfsPG3nF0"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </section>
-    </main>
+		<!-- Cabeçalho da Página (header) -->
+		<header>
 
-    <!-- Rodapé da Página (footer) -->
-    <footer>
-      <section id="redes_sociais">
-        <a href="">
-          <img src="assets/img/linkedin.svg" alt="LinkedIn" />
-        </a>
-        <a href="">
-          <img src="assets/img/github.svg" alt="Github" />
-        </a>
-        <a href="">
-          <img src="assets/img/instagram.svg" alt="Instagram" />
-        </a>
-      </section>
+			<!-- Div Conteudo do Cabeçalho -->
+			<div id="header_content" class="flex">
 
-      <h3>Feito com 🧡 por Thiago Faccipieri - 2025</h3>
-    </footer>
-  </body>
+				<!-- Titulo do Cabeçalho -->
+				<div id="titulo">
+
+					<!-- Seu nome -->
+					<h1>Generation Brasil</h1>
+
+				</div>
+
+				<!-- Conteudo do Menu da Página (header) -->
+				<div id="menu">
+
+					<!-- Menu da Página -->
+					<nav>
+
+						<!-- Marcadores não ordenados + links -->
+						<ul id="menu">
+							<li>
+								<a href="index.html">Home</a>
+							</li>
+							<li>
+								<a href="contato.html">Contato</a>
+							</li>
+						</ul>
+
+					</nav>
+
+				</div>
+
+			</div>
+
+		</header>
+
+		<!-- Seção Principal da Página (main) -->
+		<main>
+
+			<!-- Seção Sobre você -->
+			<section id="about" class="flex_start">
+
+				<!-- Título da Seção -->
+				<h2>Sobre a Generation Brasil</h2>
+
+				<!-- Conteúdo da Seção -->
+				<div id="conteudo" class="flex">
+
+					<!-- Imagem do criador do conteúdo -->
+					<img
+						src="./assets/img/user_01.svg"
+						alt="Foto do criador desse conteudo"
+						class="img_profile"
+					/>
+
+					<!-- Texto sobre o criador do conteúdo -->
+					<article id="sobre_texto">
+
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Voluptatem odio possimus, dolorem earum atque
+							itaque quas soluta placeat iure omnis porro cum
+							debitis sequi libero! Deleniti vitae quis hic
+							cumque. Lorem ipsum, dolor sit amet consectetur
+							adipisicing elit. Eius inventore ullam, quia
+							deserunt enim cumque hic officia repudiandae ad ab
+							et sapiente qui vitae accusamus adipisci provident
+							sit assumenda laboriosam!
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Voluptatem odio possimus, dolorem earum atque
+							itaque quas soluta placeat iure omnis porro cum
+							debitis sequi libero! Deleniti vitae quis hic
+							cumque. Lorem ipsum, dolor sit amet consectetur
+							adipisicing elit. Eius inventore ullam, quia
+							deserunt enim cumque hic officia repudiandae ad ab
+							et sapiente qui vitae accusamus adipisci provident
+							sit assumenda laboriosam!
+						</p>
+
+					</article>
+
+				</div>
+
+			</section>
+
+			<!-- Seção contendo um vídeo de sua preferência -->
+			<section id="video" class="flex_start">
+
+				<!-- Título da Seção -->
+				<h2>Meu vídeo favorito:</h2>
+
+				<!-- Vídeo da Seção -->
+				<div id="youtube" class="flex">
+
+					<iframe
+						width="560"
+						height="315"
+						src="https://www.youtube.com/embed/Z3_mtwMMuGI?si=F1QiiDYSfsPG3nF0"
+						frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					>
+					</iframe>
+
+				</div>
+
+			</section>
+			
+		</main>
+
+		<!-- Rodapé da Página (footer) -->
+		<footer class="flex">
+
+			<!-- Seção de Contato - Redes Sociais-->
+			<section id="redes_sociais">
+
+				<a href="">
+					<img src="assets/img/linkedin.svg" alt="LinkedIn" class="social_icon"/>
+				</a>
+				<a href="">
+					<img src="assets/img/github.svg" alt="Github" class="social_icon"/>
+				</a>
+				<a href="">
+					<img src="assets/img/instagram.svg" alt="Instagram" class="social_icon"/>
+				</a>
+
+			</section>
+
+			<h3>Feito com 🧡 por Generation Brasil - 2024</h3>
+
+		</footer>
+
+		<script src="./assets/scripts/script.js"></script>
+	</body>
 </html>
