--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
 		<main>
 			<div id="contact" class="flex">
 				<!-- Seção Formulário de Contato-->
-				<form action="#" method="submit">
+				<form action="#" method="submit" id="formulario">
 					<label for="nome">Nome: </label>
 					<input
 						id="nome"
@@ -127,5 +127,6 @@
 
 			<h3>Feito com 🧡 por Generation Brasil - 2024</h3>
 		</footer>
+		<script src="./assets/scripts/script.js"></script>
 	</body>
 </html>
